<resources>
    <string name="app_name">SAGboat</string>
    <string name="content_description_settings">Settings Icon</string>
    <string name="content_description_activity_log">Activity Log Icon</string>
    <string name="save_button_text">Save</string>
    <string name="not_connected">Device not connected</string>
    <string name="ph_text">pH: %1$.2f</string>
    <string name="turbidity_text">Turbidity: %1$.2f NTU</string>
    <string name="ph_level_description">pH Level: %s</string>
    <string name="turbidity_level_description">Turbidity Level: %s</string>
    <string name="ph_level_acidic">Acidic</string>
    <string name="ph_level_neutral">Neutral</string>
    <string name="ph_level_alkaline">Alkaline</string>
    <string name="turbidity_level_clear">Clear</string>
    <string name="turbidity_level_fairly">Fairly</string>
    <string name="turbidity_level_dirty">Dirty</string>
    <string name="wifi_status_connected">Wi-Fi Status: Connected</string>
    <string name="wifi_status_not_connected">Wi-Fi Status: Not Connected</string>
    <string name="wifi_status">Wi-Fi Status</string>
    <string name="start_stream">Start Stream</string>
    <string name="stop_stream">Stop Stream</string>
    <string name="capture">Capture</string>
    <string name="history">HISTORY</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="ph">pH</string>
    <string name="ph_level">PHL</string>
    <string name="turbidity">Tbd</string>
    <string name="turbidity_level">TbdL</string>
    <string name="data_saved">Data saved</string>
    <string name="alert">Alert</string>
    <string name="connect_to_sagboat">Please connect to SAGboat Wi-Fi to start streaming</string>
    <string name="please_start_streaming">Please start streaming to capture image</string>
    <string name="stream_not_started">Streaming not started. Please start streaming before saving data.</string>
    <string name="connect_to_sagboat_and_start_streaming">Please connect to SAGBOAT Wi-Fi and start streaming before saving data</string>
    <string name="collection_basket_full">Collection basket is full</string>
    <string name="ph_null_text">pH: N/A</string>
    <string name="turbidity_null_text">Turbidity: N/A NTU</string>
    <string name="image_saved">Image saved</string>
    <string name="connect_to_esp32">Please connect to the SAGBOAT.</string>
    <string name="infrared_null_text">Infrared: N/A</string>
    <string name="infrared_collecting">Infrared: Collecting</string>
    <string name="infrared_full">Infrared: SAGBoat is full</string>
    <string name="wifi_status_checking">Wi-Fi Status: Checking...</string>
    <string name="ssid_label">SSID: %s</string>
    <string name="password_label">Password: %s</string>
    <string name="check_wifi_status">Check Wi-Fi Status</string>
    <string name="open_wifi_settings">Open Wi-Fi Settings</string>
    <string name="failed_open_log_activity">Failed to open LogActivity. Please try again.</string>
    <string name="image_captured_saved">Image captured and saved</string>
    <string name="failed_save_image">Failed to save image</string>
    <string name="invalid_data">Invalid data, cannot save</string>
    <string name="delete">Delete</string>
    <string name="delete_entry_title">Delete Entry</string>
    <string name="delete_entry_confirmation">Are you sure you want to delete this entry?</string>
    <string name="delete_success">Entry deleted</string>
    <string name="delete_failure">Failed to delete entry</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ph_inactive">pH: Inactive</string>
    <string name="ph_level_inactive">pH Level: Inactive</string>
    <string name="turbidity_inactive">Turbidity: Inactive</string>
    <string name="turbidity_level_inactive">Turbidity Level: Inactive</string>
    <string name="infrared_inactive">Infrared: Inactive</string>
</resources>
